--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/schema-ast": "^2.4.1",
     "@mantine/core": "^4.2.5",
     "@mantine/hooks": "^4.2.5",
     "@mantine/modals": "^4.2.5",
