--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "graphql": "^16.5.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -51,9 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.4.11",
     "@graphql-codegen/typescript-operations": "2.4.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.14",
-    "@graphql-codegen/cli": "2.6.2"
+    "sass": "^1.51.0"
   }
 }
