--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # production
 /build
 
+codegen.yml
+
 # misc
 .DS_Store
 .env.local
@@ -21,5 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.yml
