--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/modals": "^4.2.5",
     "@mantine/notifications": "^4.2.5",
     "@mantine/rte": "^4.2.5",
+    "@tabler/icons": "^1.68.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
